[REQ-44] Em andamento

--- a/src/index.css
+++ b/src/index.css
@@ -83,3 +83,15 @@ code {
   width: 200px;
   overflow: hidden;
 }
+
+.favoriteWhite {
+  max-width: 100%;
+}
+
+.favoriteBlack {
+  max-width: 80%;
+}
+
+.share {
+  max-width: 100%;
+}
